tests/snapshots/run_wpt_conformance__coreml_abs_int32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
abs.https.any.js abs int32 4D tensor, coreml
 abs :: abs int32 4D tensor: index 2: actual=2147483647 expected=2147483646 tolerance=0
  inputs: absInput: [-2147483647, 0, 2147483646, 2147483647]
  expected absOutput: [2147483647, 0, 2147483646, 2147483647]
  actual absOutput: [2147483647, 0, 2147483647, 2147483647]
  expected absOutput full nd:
(shape [1, 2, 2, 1])
  [2147483647] [0]
  [2147483646] [2147483647]
  actual absOutput full nd:
(shape [1, 2, 2, 1])
  [2147483647] [0]
  [2147483647] [2147483647]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    absInput: i32[1, 2, 2, 1];
  }

  nodes {
    [absOutput] = abs(absInput, label="");
  }

  outputs { absOutput; }
}
