tests/snapshots/run_wpt_conformance__coreml_add_float16_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "add.https.any.js",
    "add float16 2D tensors",
    "coreml",
    "PASS",
)
